layout bugs

--- a/style.css
+++ b/style.css
@@ -730,6 +730,7 @@ sub {
 img {
   /*border: 0;*/
   border-radius: 50%;
+  border: 3px solid #FFD700;
 }
 
 /**
@@ -972,4 +973,16 @@ td,
 th {
   padding: 0;
 }
+
+
+
+
+
+
+
+/** Popup stuff **/
+
+
+
+
 
